--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diego Freitas - Desenvolvimento e Designer</title>
     <meta name="description" content="Desenvolvedor Front End e UX/UI Designer">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.mini.css">
 </head>
 <body>
     <header class="header">
