--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <ul class="footer-contato">
                 <li>diegodesweb@gmail.com</li>
                 <li>+55 (81) 97912-2124</li>
-                <li><a href="www.linkedin.com/in/diego-artur-desweb-front" target="_blank">Meu LinkedIn</a></li>
+                <li><a href="https://www.linkedin.com/in/diego-artur-desweb-front" target="_blank">Meu LinkedIn</a></li>
             </ul>
             <p class="footer-copy">ConnectWeb Desenvolve. Todos os direitos reservados.</p>
         </div>
